@@ -28,3 +28,6 @@ log
 ## gems
 *.gem
 
+.yardoc/
+
+.jevoom.rb
