@@ -1,0 +1,2 @@
+#no_tags 'on'
+install_message "Jeillog is now installed. Type 'jellog' for help"
