@@ -1,13 +1,13 @@
 # Created by Jevoom
 #
-# 03-Oct-2012
-#   Slight tweak to README after name change!
+# 25-Oct-2012
+#   Change default log dir to '/var/log/jellog'.
 
 module Jellog
-  # version set to 1.0.12
-  Version = '1.0.12'
-  # date set to 03-Oct-2012
-  Version_Date = '03-Oct-2012'
-  #ident string set to: jellog-1.0.12 03-Oct-2012
-  Ident = 'jellog-1.0.12 03-Oct-2012'
+  # version set to 1.0.13
+  Version = '1.0.13'
+  # date set to 25-Oct-2012
+  Version_Date = '25-Oct-2012'
+  #ident string set to: jellog-1.0.13 25-Oct-2012
+  Ident = 'jellog-1.0.13 25-Oct-2012'
 end
