@@ -1,5 +1,9 @@
 == History
 
+[jellog-1.0.13 25-Oct-2012]
+
+  Change default log dir to '/var/log/jellog'.
+
 [jellog-1.0.12 03-Oct-2012]
 
   Slight tweak to README after name change!
